--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- custom css stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -30,13 +32,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#Shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#Backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#Subscribe">Subscribe</a>
                         </li>
 
 
@@ -44,12 +46,12 @@
                 </div>
             </div>
         </nav>
-        <!-- image slider -->
+        <!-- image slider carousel -->
         <section class="container">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row bg-info p-5 bg-gradient d-flex align-items-center">
+                        <div class="row panda-bg-info p-5 bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>
@@ -57,7 +59,7 @@
                                     front of funky world.
                                 </p>
                                 <h1>$420</h1>
-                                <div class="btn btn btn-warning">
+                                <div class="btn panda-btn-buy-now">
                                     Buy Now
                                 </div>
                             </div>
@@ -68,7 +70,7 @@
 
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-info p-5 bg-gradient d-flex align-items-center">
+                        <div class="row panda-bg-info p-5 bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV for Sports</h1>
                                 <p>
@@ -76,7 +78,7 @@
                                     tv.
                                 </p>
                                 <h1>$1200</h1>
-                                <div class="btn btn btn-warning">
+                                <div class="btn panda-btn-buy-now">
                                     Buy Now
                                 </div>
                             </div>
@@ -86,7 +88,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row bg-info p-5 bg-gradient d-flex align-items-center">
+                        <div class="row panda-bg-info p-5 bg-gradient d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>X-box for your Living Room</h1>
                                 <p>
@@ -94,7 +96,7 @@
                                     sports.
                                 </p>
                                 <h1>$600</h1>
-                                <div class="btn btn btn-warning">
+                                <div class="btn panda-btn-buy-now">
                                     Buy Now
                                 </div>
                             </div>
@@ -119,7 +121,7 @@
     </header>
     <main>
         <!-- catagories -->
-        <section class="container my-5">
+        <section class="container my-5 catagories">
             <div class="row gy-4">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -142,9 +144,130 @@
 
             </div>
         </section>
-    </main>
-    <footer>
 
+        <!-- Shoe Sections -->
+        <section class="container" id="Shoes">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350
+                            </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="panda-btn-buy-now">
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="panda-btn-buy-now">
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="panda-btn-buy-now">
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- backpack section -->
+        <section class="container my-5" id="Backpack">
+            <h2>Backpack</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag
+                            </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="panda-btn-buy-now">
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="panda-btn-buy-now">
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="panda-btn-buy-now">
+                                Buy Now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- subscribe section -->
+        <section style="height: 300px;" id="Subscribe"
+            class="container panda-bg-info d-flex justify-content-center align-items-center rounded-3">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales specials and more</p>
+                <input class="form-control" type="text" placeholder="Your Email"> <br>
+                <button class="panda-btn-buy-now">
+                    SUBMIT
+                </button>
+            </div>
+        </section>
+    </main>
+    <footer class="mt-5 text-center">
+        <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
     </footer>
 
     <!-- bootstrap script -->
